<resources>
    <string name="app_name">ValueConverter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Value names -->
    <string name="value_short_name_ruble">Рублей</string>
    <string name="value_short_name_australian_dollars">Австралийских долларов</string>
    <string name="value_short_name_azerbaijani_manat">Азербайджанских манат</string>
    <string name="value_short_name_pound">Фунт стерлингов</string>
    <string name="value_short_name_armenian_dram">Армянских драмов</string>
    <string name="value_short_name_belarusian_ruble">Белорусских рублей</string>
    <string name="value_short_name_Bulgarian_Lev">Болгарский лвьов</string>
    <string name="value_short_name_Brazilian_Real">Бразильский реалов</string>
    <string name="value_short_name_Hungarian_forints">Венгерских форинтов</string>
    <string name="value_short_name_Hong_Kong_dollar">Гонконгских долларов</string>
    <string name="value_short_name_Danish_krone">Датских крон</string>
    <string name="value_short_name_US_dollar">Долларов США</string>
    <string name="value_short_name_Euro">Евро</string>
    <string name="value_short_name_Indian_rupees">Индийских рупий</string>
    <string name="value_short_name_Kazakhstani_tenge">Казахстанских тенге</string>
    <string name="value_short_name_Canadian_dollar">Канадских долларов</string>
    <string name="value_short_name_Kyrgyzstani_soms">Киргизских сомов</string>
    <string name="value_short_name_CNY">Китайских юань</string>
    <string name="value_short_name_Moldovan_lei">Молдавских леев</string>
    <string name="value_short_name_Norwegian_kroner">Норвежских крон</string>
    <string name="value_short_name_Polish_zloty">Польских злотых</string>
    <string name="value_short_name_Romanian_leu">Румынских лей</string>
    <string name="value_short_name_SDR">СДР</string>
    <string name="value_short_name_Singapore_dollar">Сингапурских долларов</string>
    <string name="value_short_name_Tajik_somoni">Таджикских сомони</string>
    <string name="value_short_name_Turkish_Lira">Турецких лир</string>
    <string name="value_short_name_New_Turkmen_manat">Новых туркменских манат</string>
    <string name="value_short_name_Uzbek_sum">Узбекских сумов</string>
    <string name="value_short_name_Ukrainian_hryvnia">Украинских гривен</string>
    <string name="value_short_name_Czech_crowns">Чешских крон</string>
    <string name="value_short_name_Swedish_krona">Шведских крон</string>
    <string name="value_short_name_Swiss_frank">Швейцарских франков</string>
    <string name="value_short_name_South_African_rand">Южноафриканских рэндов</string>
    <string name="value_short_name_Republic_of_Korea_Won">Вон Республики Корея</string>
    <string name="value_short_name_Japanese_yen">Японских иен</string>
    <!-- Value codes -->
    <string name="value_code_ruble">RUB</string>
    <string name="value_code_australian_dollars">AUD</string>
    <string name="value_code_azerbaijani_manat">AZN</string>
    <string name="value_code_pound">GBP</string>
    <string name="value_code_armenian_dram">AMD</string>
    <string name="value_code_belarusian_ruble">BYN</string>
    <string name="value_code_Bulgarian_Lev">BGN</string>
    <string name="value_code_Brazilian_Real">BRL</string>
    <string name="value_code_Hungarian_forints">HUF</string>
    <string name="value_code_Hong_Kong_dollar">HKD</string>
    <string name="value_code_Danish_krone">DKK</string>
    <string name="value_code_US_dollar">USD</string>
    <string name="value_code_Euro">EUR</string>
    <string name="value_code_Indian_rupees">INR</string>
    <string name="value_code_Kazakhstani_tenge">KZT</string>
    <string name="value_code_Canadian_dollar">CAD</string>
    <string name="value_code_Kyrgyzstani_soms">KGS</string>
    <string name="value_code_CNY">CNY</string>
    <string name="value_code_Moldovan_lei">MDL</string>
    <string name="value_code_Norwegian_kroner">NOK</string>
    <string name="value_code_Polish_zloty">PLN</string>
    <string name="value_code_Romanian_leu">RON</string>
    <string name="value_code_SDR">XDR</string>
    <string name="value_code_Singapore_dollar">SGD</string>
    <string name="value_code_Tajik_somoni">TJS</string>
    <string name="value_code_Turkish_Lira">TRY</string>
    <string name="value_code_New_Turkmen_manat">TMT</string>
    <string name="value_code_Uzbek_sum">UZS</string>
    <string name="value_code_Ukrainian_hryvnia">UAH</string>
    <string name="value_code_Czech_crowns">CZK</string>
    <string name="value_code_Swedish_krona">SEK</string>
    <string name="value_code_Swiss_frank">CHF</string>
    <string name="value_code_South_African_rand">ZAR</string>
    <string name="value_code_Republic_of_Korea_Won">KRW</string>
    <string name="value_code_Japanese_yen">JPY</string>
</resources>